samples/_failures_safe/1761170539_c87ac5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8d18361.c: In function ‘main’:
./samples/SAFE/__tmp_e8d18361.c:152:11: error: expected ‘;’ at end of input
  152 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_e8d18361.c:152:5: error: expected declaration or statement at end of input
  152 |     printf
      |     ^~~~~~
